# google-books-cite

./: DESIGN_PROJECT_GUTENBERG.md  LICENSE  README.md  RESEARCH.md  TOOLS.md  TRANSPARENCY.md  WORKFLOW.md  debug-page-extract.tex  example.bib  example.tex  find_google_books_id.py  google-books-cite.sty  test-debug.tex  test-debug2.tex  test-flow.tex  test-flow2.tex  test-gb.bcf  test-gb.gbaux  test-gb.gblinks.tex  test-gb.run.xml  test-gb.tex  test-minimal.tex  test-real.gblinks.tex  test-real.tex  test-regex.tex  test-simple.tex  test-xstring.tex  test-xstring2.tex  test1.gbaux  test1.tex  test2.bib  test2.gbaux  test2.gblinks.tex  test3.gblinks.tex  test3.tex  test4.gblinks.tex  test4.tex  test5.aux  test5.bcf  test5.bib  (+8 more)
tests/: test_integration.py
tools/: README.md  pyproject.toml
tools/gbfind/: __init__.py  augment.py  bibtex.py  cli.py  latex.py  linkgen.py  search.py  verify.py
